# founder-agent

./: .gitignore  Dockerfile  Dockerfile.aos-agent  Dockerfile.aos-agent (2).txt  Dockerfile.founder-agent  FounderAgent.py  README.md  RSSScrapper.py  WebScrapper.py  __init__.py  agent.yaml  build-founder-agent.yml  feed.rss  manifest.json  pyproject.toml  update-base-image-founder.yml
Trainer/: boardroom_repl.py  inference_role.py  loader.py  pyproject.toml  requirements.txt  train_role.py  trainer.py  usage.py
dataset/: dataset.jsonl  dataset2.jsonl  dataset3.jsonl  founder_ops_50.jsonl  full-dataset.jsonl  full-dataset2.jsonl  full-dataset3.jsonl  full-dataset4.jsonl  full-dataset5.jsonl  full-dataset6.jsonl  fundraising.jsonl  overview.md  reference-set.json
docs/: founder-agent-refactor.md
paulgraham_articles/: 6_631_372.html  A_Fundraising_Survival_Guide.html  A_New_Venture_Animal.html  A_Plan_for_Spam.html  A_Project_of_One_s_Own.html  A_Version_1_0.html  A_Way_to_Detect_Bias.html  After_Credentials.html  After_the_Ladder.html  An_Alternative_Theory_of_Unions.html  An_NFT_That_Saves_Lives.html  Apple_s_Mistake.html  Be_Good.html  Beating_the_Averages.html  Being_Popular.html  Being_a_Noob.html  Better_Bayesian_Filtering.html  Beyond_Smart.html  Change_Your_Name.html  Charisma___Power.html  Copy_What_You_Like.html  Could_VC_be_a_Casualty_of_the_Recession_.html  Default_Alive_or_Default_Dead_.html  Design_and_Research.html  Disconnecting_Distraction.html  Don_t_Talk_to_Corp_Dev.html  Early_Work.html  Earnestness.html  Economic_Inequality.html  Fashionable_Problems.html  Filters_that_Fight_Back.html  Five_Founders.html  Five_Questions_about_Language_Design.html  (+119 more)
(+319 files in other folders)
